Fixed blurry font in the navigation panel

--- a/exlporer/WebContent/css/tipsy.css
+++ b/exlporer/WebContent/css/tipsy.css
@@ -26,7 +26,7 @@
   
   div#navigationID { position:absolute; top:0; right:0; color:#FFF; font-size:xx-small; opacity:.85; height:100%; min-height:100%; min-width:100%; z-index:1; }
   div#navigationID:hover { opacity:.95; }
-  div#navigationID a { font-size:xx-small; text-decoration:underline; }
+  div#navigationID a { font-size:xx-small;  }
   
   .node {
  	 fill: #000;
